Fix controls background color and setting panels being too wide

--- a/seplis/web/ui/components/player/Player.scss
+++ b/seplis/web/ui/components/player/Player.scss
@@ -23,6 +23,7 @@
         bottom: 0;
         z-index: 2147483647;
         width: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
     }
     
     .controls-bottom {
@@ -38,7 +39,6 @@
         width: 100%;
         user-select: none;
         display: flex;
-        background-color: rgba(0, 0, 0, 0.8);
         padding-left: 0.5rem;
         padding-right: 0.5rem;
 
@@ -128,7 +128,7 @@
             .close-icon {
                 position: fixed;
                 top: 0.1rem;
-                right: 1rem;
+                left: 0.7rem;
                 border: 0;
             }
 
@@ -136,6 +136,7 @@
                 flex: 1;
                 text-align: left;
                 min-width: 250px;
+                max-width: 400px;
                 margin-bottom: 1rem;
 
                 .title {
